<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back2"
        app:title="@string/settings"
        app:titleTextAppearance="@style/CustomToolbarTitle"
        app:titleTextColor="@color/black"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/SettingsItemStyle"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:text="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/share2"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/support2"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/agreement2"
        android:text="@string/agreement" />

</LinearLayout>