<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
    </LinearLayout>
</LinearLayout>